[package]
name = "patroni-exporter"
version = "0.2.0"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"

[[bin]]
name = "patroni_exporter"
path = "src/main.rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

hyper = "^0.13"
lazy_static = "^1.4"
prometheus = { version = "^0.9", features = ["process"] }
sentry = { version = "^0.18", default-features = false, features = ["with_device_info", "with_rust_info", "with_debug_meta"] }
structopt = "^0.3"
tokio = { version = "^0.2.20", features = ["macros", "net", "rt-core", "signal", "time"] }
tracing = "^0.1"
tracing-subscriber = "^0.2"
uuid = { version = "^0.8", features = ["serde"] }